parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PTR_AMP

Grammar

Rule 0     S' -> program
Rule 1     program -> function program
Rule 2     program -> function
Rule 3     function -> type id variable_declaration block
Rule 4     type -> INT
Rule 5     type -> FLOAT
Rule 6     id -> ID
Rule 7     variable_declaration -> LPAREN declarations RPAREN
Rule 8     declarations -> type id_ptr_or_array COMMA declarations
Rule 9     declarations -> type id_ptr_or_array
Rule 10    declarations -> VOID
Rule 11    id_ptr_or_array -> id
Rule 12    id_ptr_or_array -> id array_decs
Rule 13    id_ptr_or_array -> ptrs id
Rule 14    array_decs -> SQ_LBRACKET expression SQ_RBRACKET array_decs
Rule 15    array_decs -> SQ_LBRACKET expression SQ_RBRACKET
Rule 16    ptrs -> MULTIPLY ptrs
Rule 17    ptrs -> MULTIPLY
Rule 18    block -> LBRACE statements RBRACE
Rule 19    statements -> semi_statement
Rule 20    statements -> non_semi_statement
Rule 21    statements -> semi_statement SEMI statements
Rule 22    statements -> non_semi_statement statements
Rule 23    statements -> empty
Rule 24    semi_statement -> var_declaration
Rule 25    semi_statement -> var_assignment
Rule 26    semi_statement -> function_app
Rule 27    semi_statement -> return_expr
Rule 28    non_semi_statement -> conditional
Rule 29    non_semi_statement -> for
Rule 30    non_semi_statement -> while
Rule 31    conditional -> if elif_else
Rule 32    if -> IF LPAREN expression RPAREN block
Rule 33    elif_else -> elif else
Rule 34    elif -> ELSE IF LPAREN expression RPAREN block elif
Rule 35    elif -> empty
Rule 36    else -> ELSE block
Rule 37    else -> empty
Rule 38    for -> FOR LPAREN loop_init_or_empty SEMI semi_statement_or_empty SEMI semi_statement_or_empty RPAREN block
Rule 39    loop_init_or_empty -> loop_init
Rule 40    loop_init_or_empty -> expression
Rule 41    loop_init_or_empty -> empty
Rule 42    semi_statement_or_empty -> semi_statement
Rule 43    semi_statement_or_empty -> expression
Rule 44    semi_statement_or_empty -> empty
Rule 45    loop_init -> type var_assignment
Rule 46    loop_init -> semi_statement
Rule 47    while -> WHILE LPAREN expression RPAREN block
Rule 48    var_declaration -> type var_and_assign
Rule 49    var_assignment -> id_ptr_or_array EQ expression
Rule 50    var_assignment -> id_ptr_or_array EQ function_app
Rule 51    var_and_assign -> var_assignment COMMA var_and_assign
Rule 52    var_and_assign -> var_assignment
Rule 53    var_and_assign -> id_ptr_or_array COMMA var_and_assign
Rule 54    var_and_assign -> id_ptr_or_array
Rule 55    return_expr -> RETURN expression
Rule 56    function_app -> PRINTF LPAREN STRING print_formats RPAREN
Rule 57    function_app -> ID LPAREN arguments RPAREN
Rule 58    print_formats -> COMMA expression print_formats
Rule 59    print_formats -> expression
Rule 60    print_formats -> empty
Rule 61    arguments -> expression COMMA arguments
Rule 62    arguments -> expression
Rule 63    arguments -> empty
Rule 64    empty -> <empty>
Rule 65    expression -> expression PLUS expression
Rule 66    expression -> expression MINUS expression
Rule 67    expression -> expression MULTIPLY expression
Rule 68    expression -> expression DIVIDE expression
Rule 69    expression -> expression LESS expression
Rule 70    expression -> expression GREATER expression
Rule 71    expression -> LPAREN expression RPAREN
Rule 72    expression -> MINUS expression
Rule 73    expression -> expression DOUBLEPLUS
Rule 74    expression -> id_ptr_or_array
Rule 75    expression -> INT_VAL
Rule 76    expression -> FLOAT_VAL

Terminals, with rules where they appear

COMMA                : 8 51 53 58 61
DIVIDE               : 68
DOUBLEPLUS           : 73
ELSE                 : 34 36
EQ                   : 49 50
FLOAT                : 5
FLOAT_VAL            : 76
FOR                  : 38
GREATER              : 70
ID                   : 6 57
IF                   : 32 34
INT                  : 4
INT_VAL              : 75
LBRACE               : 18
LESS                 : 69
LPAREN               : 7 32 34 38 47 56 57 71
MINUS                : 66 72
MULTIPLY             : 16 17 67
PLUS                 : 65
PRINTF               : 56
PTR_AMP              : 
RBRACE               : 18
RETURN               : 55
RPAREN               : 7 32 34 38 47 56 57 71
SEMI                 : 21 38 38
SQ_LBRACKET          : 14 15
SQ_RBRACKET          : 14 15
STRING               : 56
VOID                 : 10
WHILE                : 47
error                : 

Nonterminals, with rules where they appear

arguments            : 57 61
array_decs           : 12 14
block                : 3 32 34 36 38 47
conditional          : 28
declarations         : 7 8
elif                 : 33 34
elif_else            : 31
else                 : 33
empty                : 23 35 37 41 44 60 63
expression           : 14 15 32 34 40 43 47 49 55 58 59 61 62 65 65 66 66 67 67 68 68 69 69 70 70 71 72 73
for                  : 29
function             : 1 2
function_app         : 26 50
id                   : 3 11 12 13
id_ptr_or_array      : 8 9 49 50 53 54 74
if                   : 31
loop_init            : 39
loop_init_or_empty   : 38
non_semi_statement   : 20 22
print_formats        : 56 58
program              : 1 0
ptrs                 : 13 16
return_expr          : 27
semi_statement       : 19 21 42 46
semi_statement_or_empty : 38 38
statements           : 18 21 22
type                 : 3 8 9 45 48
var_and_assign       : 48 51 53
var_assignment       : 25 45 51 52
var_declaration      : 24
variable_declaration : 3
while                : 30

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function program
    (2) program -> . function
    (3) function -> . type id variable_declaration block
    (4) type -> . INT
    (5) type -> . FLOAT

    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    program                        shift and go to state 1
    function                       shift and go to state 2
    type                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> function . program
    (2) program -> function .
    (1) program -> . function program
    (2) program -> . function
    (3) function -> . type id variable_declaration block
    (4) type -> . INT
    (5) type -> . FLOAT

    $end            reduce using rule 2 (program -> function .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    function                       shift and go to state 2
    program                        shift and go to state 6
    type                           shift and go to state 3

state 3

    (3) function -> type . id variable_declaration block
    (6) id -> . ID

    ID              shift and go to state 8

    id                             shift and go to state 7

state 4

    (4) type -> INT .

    ID              reduce using rule 4 (type -> INT .)
    MULTIPLY        reduce using rule 4 (type -> INT .)


state 5

    (5) type -> FLOAT .

    ID              reduce using rule 5 (type -> FLOAT .)
    MULTIPLY        reduce using rule 5 (type -> FLOAT .)


state 6

    (1) program -> function program .

    $end            reduce using rule 1 (program -> function program .)


state 7

    (3) function -> type id . variable_declaration block
    (7) variable_declaration -> . LPAREN declarations RPAREN

    LPAREN          shift and go to state 10

    variable_declaration           shift and go to state 9

state 8

    (6) id -> ID .

    LPAREN          reduce using rule 6 (id -> ID .)
    SQ_LBRACKET     reduce using rule 6 (id -> ID .)
    COMMA           reduce using rule 6 (id -> ID .)
    RPAREN          reduce using rule 6 (id -> ID .)
    EQ              reduce using rule 6 (id -> ID .)
    SEMI            reduce using rule 6 (id -> ID .)
    RBRACE          reduce using rule 6 (id -> ID .)
    PLUS            reduce using rule 6 (id -> ID .)
    MINUS           reduce using rule 6 (id -> ID .)
    MULTIPLY        reduce using rule 6 (id -> ID .)
    DIVIDE          reduce using rule 6 (id -> ID .)
    LESS            reduce using rule 6 (id -> ID .)
    GREATER         reduce using rule 6 (id -> ID .)
    DOUBLEPLUS      reduce using rule 6 (id -> ID .)
    SQ_RBRACKET     reduce using rule 6 (id -> ID .)
    INT_VAL         reduce using rule 6 (id -> ID .)
    FLOAT_VAL       reduce using rule 6 (id -> ID .)
    ID              reduce using rule 6 (id -> ID .)


state 9

    (3) function -> type id variable_declaration . block
    (18) block -> . LBRACE statements RBRACE

    LBRACE          shift and go to state 12

    block                          shift and go to state 11

state 10

    (7) variable_declaration -> LPAREN . declarations RPAREN
    (8) declarations -> . type id_ptr_or_array COMMA declarations
    (9) declarations -> . type id_ptr_or_array
    (10) declarations -> . VOID
    (4) type -> . INT
    (5) type -> . FLOAT

    VOID            shift and go to state 15
    INT             shift and go to state 4
    FLOAT           shift and go to state 5

    declarations                   shift and go to state 13
    type                           shift and go to state 14

state 11

    (3) function -> type id variable_declaration block .

    INT             reduce using rule 3 (function -> type id variable_declaration block .)
    FLOAT           reduce using rule 3 (function -> type id variable_declaration block .)
    $end            reduce using rule 3 (function -> type id variable_declaration block .)


state 12

    (18) block -> LBRACE . statements RBRACE
    (19) statements -> . semi_statement
    (20) statements -> . non_semi_statement
    (21) statements -> . semi_statement SEMI statements
    (22) statements -> . non_semi_statement statements
    (23) statements -> . empty
    (24) semi_statement -> . var_declaration
    (25) semi_statement -> . var_assignment
    (26) semi_statement -> . function_app
    (27) semi_statement -> . return_expr
    (28) non_semi_statement -> . conditional
    (29) non_semi_statement -> . for
    (30) non_semi_statement -> . while
    (64) empty -> .
    (48) var_declaration -> . type var_and_assign
    (49) var_assignment -> . id_ptr_or_array EQ expression
    (50) var_assignment -> . id_ptr_or_array EQ function_app
    (56) function_app -> . PRINTF LPAREN STRING print_formats RPAREN
    (57) function_app -> . ID LPAREN arguments RPAREN
    (55) return_expr -> . RETURN expression
    (31) conditional -> . if elif_else
    (38) for -> . FOR LPAREN loop_init_or_empty SEMI semi_statement_or_empty SEMI semi_statement_or_empty RPAREN block
    (47) while -> . WHILE LPAREN expression RPAREN block
    (4) type -> . INT
    (5) type -> . FLOAT
    (11) id_ptr_or_array -> . id
    (12) id_ptr_or_array -> . id array_decs
    (13) id_ptr_or_array -> . ptrs id
    (32) if -> . IF LPAREN expression RPAREN block
    (6) id -> . ID
    (16) ptrs -> . MULTIPLY ptrs
    (17) ptrs -> . MULTIPLY

    RBRACE          reduce using rule 64 (empty -> .)
    PRINTF          shift and go to state 29
    ID              shift and go to state 30
    RETURN          shift and go to state 31
    FOR             shift and go to state 33
    WHILE           shift and go to state 34
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    IF              shift and go to state 37
    MULTIPLY        shift and go to state 38

    statements                     shift and go to state 16
    semi_statement                 shift and go to state 17
    non_semi_statement             shift and go to state 18
    empty                          shift and go to state 19
    var_declaration                shift and go to state 20
    var_assignment                 shift and go to state 21
    function_app                   shift and go to state 22
    return_expr                    shift and go to state 23
    conditional                    shift and go to state 24
    for                            shift and go to state 25
    while                          shift and go to state 26
    type                           shift and go to state 27
    id_ptr_or_array                shift and go to state 28
    if                             shift and go to state 32
    id                             shift and go to state 35
    ptrs                           shift and go to state 36

state 13

    (7) variable_declaration -> LPAREN declarations . RPAREN

    RPAREN          shift and go to state 39


state 14

    (8) declarations -> type . id_ptr_or_array COMMA declarations
    (9) declarations -> type . id_ptr_or_array
    (11) id_ptr_or_array -> . id
    (12) id_ptr_or_array -> . id array_decs
    (13) id_ptr_or_array -> . ptrs id
    (6) id -> . ID
    (16) ptrs -> . MULTIPLY ptrs
    (17) ptrs -> . MULTIPLY

    ID              shift and go to state 8
    MULTIPLY        shift and go to state 38

    id_ptr_or_array                shift and go to state 40
    id                             shift and go to state 35
    ptrs                           shift and go to state 36

state 15

    (10) declarations -> VOID .

    RPAREN          reduce using rule 10 (declarations -> VOID .)


state 16

    (18) block -> LBRACE statements . RBRACE

    RBRACE          shift and go to state 41


state 17

    (19) statements -> semi_statement .
    (21) statements -> semi_statement . SEMI statements

    RBRACE          reduce using rule 19 (statements -> semi_statement .)
    SEMI            shift and go to state 42


state 18

    (20) statements -> non_semi_statement .
    (22) statements -> non_semi_statement . statements
    (19) statements -> . semi_statement
    (20) statements -> . non_semi_statement
    (21) statements -> . semi_statement SEMI statements
    (22) statements -> . non_semi_statement statements
    (23) statements -> . empty
    (24) semi_statement -> . var_declaration
    (25) semi_statement -> . var_assignment
    (26) semi_statement -> . function_app
    (27) semi_statement -> . return_expr
    (28) non_semi_statement -> . conditional
    (29) non_semi_statement -> . for
    (30) non_semi_statement -> . while
    (64) empty -> .
    (48) var_declaration -> . type var_and_assign
    (49) var_assignment -> . id_ptr_or_array EQ expression
    (50) var_assignment -> . id_ptr_or_array EQ function_app
    (56) function_app -> . PRINTF LPAREN STRING print_formats RPAREN
    (57) function_app -> . ID LPAREN arguments RPAREN
    (55) return_expr -> . RETURN expression
    (31) conditional -> . if elif_else
    (38) for -> . FOR LPAREN loop_init_or_empty SEMI semi_statement_or_empty SEMI semi_statement_or_empty RPAREN block
    (47) while -> . WHILE LPAREN expression RPAREN block
    (4) type -> . INT
    (5) type -> . FLOAT
    (11) id_ptr_or_array -> . id
    (12) id_ptr_or_array -> . id array_decs
    (13) id_ptr_or_array -> . ptrs id
    (32) if -> . IF LPAREN expression RPAREN block
    (6) id -> . ID
    (16) ptrs -> . MULTIPLY ptrs
    (17) ptrs -> . MULTIPLY

  ! reduce/reduce conflict for RBRACE resolved using rule 20 (statements -> non_semi_statement .)
    RBRACE          reduce using rule 20 (statements -> non_semi_statement .)
    PRINTF          shift and go to state 29
    ID              shift and go to state 30
    RETURN          shift and go to state 31
    FOR             shift and go to state 33
    WHILE           shift and go to state 34
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    IF              shift and go to state 37
    MULTIPLY        shift and go to state 38

  ! RBRACE          [ reduce using rule 64 (empty -> .) ]

    non_semi_statement             shift and go to state 18
    statements                     shift and go to state 43
    semi_statement                 shift and go to state 17
    empty                          shift and go to state 19
    var_declaration                shift and go to state 20
    var_assignment                 shift and go to state 21
    function_app                   shift and go to state 22
    return_expr                    shift and go to state 23
    conditional                    shift and go to state 24
    for                            shift and go to state 25
    while                          shift and go to state 26
    type                           shift and go to state 27
    id_ptr_or_array                shift and go to state 28
    if                             shift and go to state 32
    id                             shift and go to state 35
    ptrs                           shift and go to state 36

state 19

    (23) statements -> empty .

    RBRACE          reduce using rule 23 (statements -> empty .)


state 20

    (24) semi_statement -> var_declaration .

    SEMI            reduce using rule 24 (semi_statement -> var_declaration .)
    RBRACE          reduce using rule 24 (semi_statement -> var_declaration .)
    RPAREN          reduce using rule 24 (semi_statement -> var_declaration .)


state 21

    (25) semi_statement -> var_assignment .

    SEMI            reduce using rule 25 (semi_statement -> var_assignment .)
    RBRACE          reduce using rule 25 (semi_statement -> var_assignment .)
    RPAREN          reduce using rule 25 (semi_statement -> var_assignment .)


state 22

    (26) semi_statement -> function_app .

    SEMI            reduce using rule 26 (semi_statement -> function_app .)
    RBRACE          reduce using rule 26 (semi_statement -> function_app .)
    RPAREN          reduce using rule 26 (semi_statement -> function_app .)


state 23

    (27) semi_statement -> return_expr .

    SEMI            reduce using rule 27 (semi_statement -> return_expr .)
    RBRACE          reduce using rule 27 (semi_statement -> return_expr .)
    RPAREN          reduce using rule 27 (semi_statement -> return_expr .)


state 24

    (28) non_semi_statement -> conditional .

    PRINTF          reduce using rule 28 (non_semi_statement -> conditional .)
    ID              reduce using rule 28 (non_semi_statement -> conditional .)
    RETURN          reduce using rule 28 (non_semi_statement -> conditional .)
    FOR             reduce using rule 28 (non_semi_statement -> conditional .)
    WHILE           reduce using rule 28 (non_semi_statement -> conditional .)
    INT             reduce using rule 28 (non_semi_statement -> conditional .)
    FLOAT           reduce using rule 28 (non_semi_statement -> conditional .)
    IF              reduce using rule 28 (non_semi_statement -> conditional .)
    MULTIPLY        reduce using rule 28 (non_semi_statement -> conditional .)
    RBRACE          reduce using rule 28 (non_semi_statement -> conditional .)


state 25

    (29) non_semi_statement -> for .

    PRINTF          reduce using rule 29 (non_semi_statement -> for .)
    ID              reduce using rule 29 (non_semi_statement -> for .)
    RETURN          reduce using rule 29 (non_semi_statement -> for .)
    FOR             reduce using rule 29 (non_semi_statement -> for .)
    WHILE           reduce using rule 29 (non_semi_statement -> for .)
    INT             reduce using rule 29 (non_semi_statement -> for .)
    FLOAT           reduce using rule 29 (non_semi_statement -> for .)
    IF              reduce using rule 29 (non_semi_statement -> for .)
    MULTIPLY        reduce using rule 29 (non_semi_statement -> for .)
    RBRACE          reduce using rule 29 (non_semi_statement -> for .)


state 26

    (30) non_semi_statement -> while .

    PRINTF          reduce using rule 30 (non_semi_statement -> while .)
    ID              reduce using rule 30 (non_semi_statement -> while .)
    RETURN          reduce using rule 30 (non_semi_statement -> while .)
    FOR             reduce using rule 30 (non_semi_statement -> while .)
    WHILE           reduce using rule 30 (non_semi_statement -> while .)
    INT             reduce using rule 30 (non_semi_statement -> while .)
    FLOAT           reduce using rule 30 (non_semi_statement -> while .)
    IF              reduce using rule 30 (non_semi_statement -> while .)
    MULTIPLY        reduce using rule 30 (non_semi_statement -> while .)
    RBRACE          reduce using rule 30 (non_semi_statement -> while .)


state 27

    (48) var_declaration -> type . var_and_assign
    (51) var_and_assign -> . var_assignment COMMA var_and_assign
    (52) var_and_assign -> . var_assignment
    (53) var_and_assign -> . id_ptr_or_array COMMA var_and_assign
    (54) var_and_assign -> . id_ptr_or_array
    (49) var_assignment -> . id_ptr_or_array EQ expression
    (50) var_assignment -> . id_ptr_or_array EQ function_app
    (11) id_ptr_or_array -> . id
    (12) id_ptr_or_array -> . id array_decs
    (13) id_ptr_or_array -> . ptrs id
    (6) id -> . ID
    (16) ptrs -> . MULTIPLY ptrs
    (17) ptrs -> . MULTIPLY

    ID              shift and go to state 8
    MULTIPLY        shift and go to state 38

    var_and_assign                 shift and go to state 44
    var_assignment                 shift and go to state 45
    id_ptr_or_array                shift and go to state 46
    id                             shift and go to state 35
    ptrs                           shift and go to state 36

state 28

    (49) var_assignment -> id_ptr_or_array . EQ expression
    (50) var_assignment -> id_ptr_or_array . EQ function_app

    EQ              shift and go to state 47


state 29

    (56) function_app -> PRINTF . LPAREN STRING print_formats RPAREN

    LPAREN          shift and go to state 48


state 30

    (57) function_app -> ID . LPAREN arguments RPAREN
    (6) id -> ID .

    LPAREN          shift and go to state 49
    SQ_LBRACKET     reduce using rule 6 (id -> ID .)
    EQ              reduce using rule 6 (id -> ID .)
    PLUS            reduce using rule 6 (id -> ID .)
    MINUS           reduce using rule 6 (id -> ID .)
    MULTIPLY        reduce using rule 6 (id -> ID .)
    DIVIDE          reduce using rule 6 (id -> ID .)
    LESS            reduce using rule 6 (id -> ID .)
    GREATER         reduce using rule 6 (id -> ID .)
    DOUBLEPLUS      reduce using rule 6 (id -> ID .)
    SEMI            reduce using rule 6 (id -> ID .)
    RBRACE          reduce using rule 6 (id -> ID .)
    COMMA           reduce using rule 6 (id -> ID .)
    RPAREN          reduce using rule 6 (id -> ID .)


state 31

    (55) return_expr -> RETURN . expression
    (65) expression -> . expression PLUS expression
    (66) expression -> . expression MINUS expression
    (67) expression -> . expression MULTIPLY expression
    (68) expression -> . expression DIVIDE expression
    (69) expression -> . expression LESS expression
    (70) expression -> . expression GREATER expression
    (71) expression -> . LPAREN expression RPAREN
    (72) expression -> . MINUS expression
    (73) expression -> . expression DOUBLEPLUS
    (74) expression -> . id_ptr_or_array
    (75) expression -> . INT_VAL
    (76) expression -> . FLOAT_VAL
    (11) id_ptr_or_array -> . id
    (12) id_ptr_or_array -> . id array_decs
    (13) id_ptr_or_array -> . ptrs id
    (6) id -> . ID
    (16) ptrs -> . MULTIPLY ptrs
    (17) ptrs -> . MULTIPLY

    LPAREN          shift and go to state 52
    MINUS           shift and go to state 51
    INT_VAL         shift and go to state 54
    FLOAT_VAL       shift and go to state 55
    ID              shift and go to state 8
    MULTIPLY        shift and go to state 38

    expression                     shift and go to state 50
    id_ptr_or_array                shift and go to state 53
    id                             shift and go to state 35
    ptrs                           shift and go to state 36

state 32

    (31) conditional -> if . elif_else
    (33) elif_else -> . elif else
    (34) elif -> . ELSE IF LPAREN expression RPAREN block elif
    (35) elif -> . empty
    (64) empty -> .

  ! shift/reduce conflict for ELSE resolved as shift
    ELSE            shift and go to state 58
    PRINTF          reduce using rule 64 (empty -> .)
    ID              reduce using rule 64 (empty -> .)
    RETURN          reduce using rule 64 (empty -> .)
    FOR             reduce using rule 64 (empty -> .)
    WHILE           reduce using rule 64 (empty -> .)
    INT             reduce using rule 64 (empty -> .)
    FLOAT           reduce using rule 64 (empty -> .)
    IF              reduce using rule 64 (empty -> .)
    MULTIPLY        reduce using rule 64 (empty -> .)
    RBRACE          reduce using rule 64 (empty -> .)

  ! ELSE            [ reduce using rule 64 (empty -> .) ]

    elif_else                      shift and go to state 56
    elif                           shift and go to state 57
    empty                          shift and go to state 59

state 33

    (38) for -> FOR . LPAREN loop_init_or_empty SEMI semi_statement_or_empty SEMI semi_statement_or_empty RPAREN block

    LPAREN          shift and go to state 60


state 34

    (47) while -> WHILE . LPAREN expression RPAREN block

    LPAREN          shift and go to state 61


state 35

    (11) id_ptr_or_array -> id .
    (12) id_ptr_or_array -> id . array_decs
    (14) array_decs -> . SQ_LBRACKET expression SQ_RBRACKET array_decs
    (15) array_decs -> . SQ_LBRACKET expression SQ_RBRACKET

    EQ              reduce using rule 11 (id_ptr_or_array -> id .)
    COMMA           reduce using rule 11 (id_ptr_or_array -> id .)
    RPAREN          reduce using rule 11 (id_ptr_or_array -> id .)
    SEMI            reduce using rule 11 (id_ptr_or_array -> id .)
    RBRACE          reduce using rule 11 (id_ptr_or_array -> id .)
    PLUS            reduce using rule 11 (id_ptr_or_array -> id .)
    MINUS           reduce using rule 11 (id_ptr_or_array -> id .)
    MULTIPLY        reduce using rule 11 (id_ptr_or_array -> id .)
    DIVIDE          reduce using rule 11 (id_ptr_or_array -> id .)
    LESS            reduce using rule 11 (id_ptr_or_array -> id .)
    GREATER         reduce using rule 11 (id_ptr_or_array -> id .)
    DOUBLEPLUS      reduce using rule 11 (id_ptr_or_array -> id .)
    SQ_RBRACKET     reduce using rule 11 (id_ptr_or_array -> id .)
    LPAREN          reduce using rule 11 (id_ptr_or_array -> id .)
    INT_VAL         reduce using rule 11 (id_ptr_or_array -> id .)
    FLOAT_VAL       reduce using rule 11 (id_ptr_or_array -> id .)
    ID              reduce using rule 11 (id_ptr_or_array -> id .)
    SQ_LBRACKET     shift and go to state 63

    array_decs                     shift and go to state 62

state 36

    (13) id_ptr_or_array -> ptrs . id
    (6) id -> . ID

    ID              shift and go to state 8

    id                             shift and go to state 64

state 37

    (32) if -> IF . LPAREN expression RPAREN block

    LPAREN          shift and go to state 65


state 38

    (16) ptrs -> MULTIPLY . ptrs
    (17) ptrs -> MULTIPLY .
    (16) ptrs -> . MULTIPLY ptrs
    (17) ptrs -> . MULTIPLY

    ID              reduce using rule 17 (ptrs -> MULTIPLY .)
    MULTIPLY        shift and go to state 38

    ptrs                           shift and go to state 66

state 39

    (7) variable_declaration -> LPAREN declarations RPAREN .

    LBRACE          reduce using rule 7 (variable_declaration -> LPAREN declarations RPAREN .)


state 40

    (8) declarations -> type id_ptr_or_array . COMMA declarations
    (9) declarations -> type id_ptr_or_array .

    COMMA           shift and go to state 67
    RPAREN          reduce using rule 9 (declarations -> type id_ptr_or_array .)


state 41

    (18) block -> LBRACE statements RBRACE .

    INT             reduce using rule 18 (block -> LBRACE statements RBRACE .)
    FLOAT           reduce using rule 18 (block -> LBRACE statements RBRACE .)
    $end            reduce using rule 18 (block -> LBRACE statements RBRACE .)
    PRINTF          reduce using rule 18 (block -> LBRACE statements RBRACE .)
    ID              reduce using rule 18 (block -> LBRACE statements RBRACE .)
    RETURN          reduce using rule 18 (block -> LBRACE statements RBRACE .)
    FOR             reduce using rule 18 (block -> LBRACE statements RBRACE .)
    WHILE           reduce using rule 18 (block -> LBRACE statements RBRACE .)
    IF              reduce using rule 18 (block -> LBRACE statements RBRACE .)
    MULTIPLY        reduce using rule 18 (block -> LBRACE statements RBRACE .)
    RBRACE          reduce using rule 18 (block -> LBRACE statements RBRACE .)
    ELSE            reduce using rule 18 (block -> LBRACE statements RBRACE .)


state 42

    (21) statements -> semi_statement SEMI . statements
    (19) statements -> . semi_statement
    (20) statements -> . non_semi_statement
    (21) statements -> . semi_statement SEMI statements
    (22) statements -> . non_semi_statement statements
    (23) statements -> . empty
    (24) semi_statement -> . var_declaration
    (25) semi_statement -> . var_assignment
    (26) semi_statement -> . function_app
    (27) semi_statement -> . return_expr
    (28) non_semi_statement -> . conditional
    (29) non_semi_statement -> . for
    (30) non_semi_statement -> . while
    (64) empty -> .
    (48) var_declaration -> . type var_and_assign
    (49) var_assignment -> . id_ptr_or_array EQ expression
    (50) var_assignment -> . id_ptr_or_array EQ function_app
    (56) function_app -> . PRINTF LPAREN STRING print_formats RPAREN
    (57) function_app -> . ID LPAREN arguments RPAREN
    (55) return_expr -> . RETURN expression
    (31) conditional -> . if elif_else
    (38) for -> . FOR LPAREN loop_init_or_empty SEMI semi_statement_or_empty SEMI semi_statement_or_empty RPAREN block
    (47) while -> . WHILE LPAREN expression RPAREN block
    (4) type -> . INT
    (5) type -> . FLOAT
    (11) id_ptr_or_array -> . id
    (12) id_ptr_or_array -> . id array_decs
    (13) id_ptr_or_array -> . ptrs id
    (32) if -> . IF LPAREN expression RPAREN block
    (6) id -> . ID
    (16) ptrs -> . MULTIPLY ptrs
    (17) ptrs -> . MULTIPLY

    RBRACE          reduce using rule 64 (empty -> .)
    PRINTF          shift and go to state 29
    ID              shift and go to state 30
    RETURN          shift and go to state 31
    FOR             shift and go to state 33
    WHILE           shift and go to state 34
    INT             shift and go to state 4
    FLOAT           shift and go to state 5
    IF              shift and go to state 37
    MULTIPLY        shift and go to state 38

    semi_statement                 shift and go to state 17
    statements                     shift and go to state 68
    non_semi_statement             shift and go to state 18
    empty                          shift and go to state 19
    var_declaration                shift and go to state 20
    var_assignment                 shift and go to state 21
    function_app                   shift and go to state 22
    return_expr                    shift and go to state 23
    conditional                    shift and go to state 24
    for                            shift and go to state 25
    while                          shift and go to state 26
    type                           shift and go to state 27
    id_ptr_or_array                shift and go to state 28
    if                             shift and go to state 32
    id                             shift and go to state 35
    ptrs                           shift and go to state 36

state 43

    (22) statements -> non_semi_statement statements .

    RBRACE          reduce using rule 22 (statements -> non_semi_statement statements .)


state 44

    (48) var_declaration -> type var_and_assign .

    SEMI            reduce using rule 48 (var_declaration -> type var_and_assign .)
    RBRACE          reduce using rule 48 (var_declaration -> type var_and_assign .)
    RPAREN          reduce using rule 48 (var_declaration -> type var_and_assign .)


state 45

    (51) var_and_assign -> var_assignment . COMMA var_and_assign
    (52) var_and_assign -> var_assignment .

    COMMA           shift and go to state 69
    SEMI            reduce using rule 52 (var_and_assign -> var_assignment .)
    RBRACE          reduce using rule 52 (var_and_assign -> var_assignment .)
    RPAREN          reduce using rule 52 (var_and_assign -> var_assignment .)


state 46

    (53) var_and_assign -> id_ptr_or_array . COMMA var_and_assign
    (54) var_and_assign -> id_ptr_or_array .
    (49) var_assignment -> id_ptr_or_array . EQ expression
    (50) var_assignment -> id_ptr_or_array . EQ function_app

    COMMA           shift and go to state 70
    SEMI            reduce using rule 54 (var_and_assign -> id_ptr_or_array .)
    RBRACE          reduce using rule 54 (var_and_assign -> id_ptr_or_array .)
    RPAREN          reduce using rule 54 (var_and_assign -> id_ptr_or_array .)
    EQ              shift and go to state 47


state 47

    (49) var_assignment -> id_ptr_or_array EQ . expression
    (50) var_assignment -> id_ptr_or_array EQ . function_app
    (65) expression -> . expression PLUS expression
    (66) expression -> . expression MINUS expression
    (67) expression -> . expression MULTIPLY expression
    (68) expression -> . expression DIVIDE expression
    (69) expression -> . expression LESS expression
    (70) expression -> . expression GREATER expression
    (71) expression -> . LPAREN expression RPAREN
    (72) expression -> . MINUS expression
    (73) expression -> . expression DOUBLEPLUS
    (74) expression -> . id_ptr_or_array
    (75) expression -> . INT_VAL
    (76) expression -> . FLOAT_VAL
    (56) function_app -> . PRINTF LPAREN STRING print_formats RPAREN
    (57) function_app -> . ID LPAREN arguments RPAREN
    (11) id_ptr_or_array -> . id
    (12) id_ptr_or_array -> . id array_decs
    (13) id_ptr_or_array -> . ptrs id
    (6) id -> . ID
    (16) ptrs -> . MULTIPLY ptrs
    (17) ptrs -> . MULTIPLY

    LPAREN          shift and go to state 52
    MINUS           shift and go to state 51
    INT_VAL         shift and go to state 54
    FLOAT_VAL       shift and go to state 55
    PRINTF          shift and go to state 29
    ID              shift and go to state 30
    MULTIPLY        shift and go to state 38

    id_ptr_or_array                shift and go to state 53
    expression                     shift and go to state 71
    function_app                   shift and go to state 72
    id                             shift and go to state 35
    ptrs                           shift and go to state 36

state 48

    (56) function_app -> PRINTF LPAREN . STRING print_formats RPAREN

    STRING          shift and go to state 73


state 49

    (57) function_app -> ID LPAREN . arguments RPAREN
    (61) arguments -> . expression COMMA arguments
    (62) arguments -> . expression
    (63) arguments -> . empty
    (65) expression -> . expression PLUS expression
    (66) expression -> . expression MINUS expression
    (67) expression -> . expression MULTIPLY expression
    (68) expression -> . expression DIVIDE expression
    (69) expression -> . expression LESS expression
    (70) expression -> . expression GREATER expression
    (71) expression -> . LPAREN expression RPAREN
    (72) expression -> . MINUS expression
    (73) expression -> . expression DOUBLEPLUS
    (74) expression -> . id_ptr_or_array
    (75) expression -> . INT_VAL
    (76) expression -> . FLOAT_VAL
    (64) empty -> .
    (11) id_ptr_or_array -> . id
    (12) id_ptr_or_array -> . id array_decs
    (13) id_ptr_or_array -> . ptrs id
    (6) id -> . ID
    (16) ptrs -> . MULTIPLY ptrs
    (17) ptrs -> . MULTIPLY
